<resources>
    <string name="app_name">Screenomics Dashboard</string>
    <string name="login_prompt_title">Screenomics Dashboard!</string>
    <string name="prompt_code">Code</string>
    <string name="prompt_number">Number\n</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="login_prompt_instructions">Please enter the following information to log in or create an account.</string>
    <string name="login">Login</string>
    <string name="please_wait">Please Wait..</string>
    <string name="send_user_a_email">Send User A Email</string>
</resources>